2004-03-11  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_drag_set_delete_cursor):
	Put the trash icon on the right for LTR locales, or on the left
	for RTL.
	(shortcuts_drag_motion_cb): Cancel the idle handler here as well.
	(shortcuts_drag_leave_cb): Test whether the idle is present.
	(shortcuts_drag_data_received_cb): Ahem, don't assert here.

Thu Mar 11 17:51:10 2004  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (preedit_done_callback):
	Clear preedit string and emit preedit_changed as needed
	on AIX. (#130617, Philip K Warren)

2004-03-11  Morten Welinder  <terra@gnome.org>

	* gtk/gtkpathbar.c (_gtk_path_bar_set_file_system): Plug leak.

Thu Mar 11 16:28:15 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_get_toplevel): Fix attach/attach->parent
	type. (#136919, Tim Mooney)

Thu Mar 11 16:18:51 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooserdefault.c (shortcuts_insert_path): revert
	earlier change to insert_path so that we test that the directory
	exists.

	* gtk/gtkfilechooserdialog.c
	(gtk_file_chooser_dialog_constructor): move focus.

Thu Mar 11 22:12:14 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkspinbutton.c (gtk_spin_button_size_request): Use the same
	logic as GtkEntry when calculating border width.  (#116368, reported
	by Morten Welinder)

Thu Mar 11 15:59:05 2004  Owen Taylor  <otaylor@redhat.com>

	* tests/testgtk.c (create_spins): Use gtk_entry_set_width_chars()
	rather than gtk_widget_set_size_request().

2004-03-11  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (remove_settings_signal): New
	function, copied from gtkpathbar.c.
	(gtk_file_chooser_default_dispose): Use remove_settings_signal()
	rather than our own code.
	(gtk_file_chooser_default_screen_changed): Use
	remove_settings_signal(); this should handle per-screen settings
	correctly.

Thu Mar 11 14:07:18 2004  Owen Taylor  <otaylor@redhat.com>
