@@ -20,22 +20,23 @@ testfilechooser
 testgtk
 testicontheme
 testinput
-testmerge
 testmenus
+testmerge
 testmultidisplay
 testmultiscreen
 testrgb
 testselection
-testtext
-testtoolbar
-testtreeedit
-testtreeview
-testtreecolumns
 testsocket
 testsocket_child
+testspinbutton
+testtext
 testtextbuffer
+testtoolbar
+testtreecolumns
+testtreeedit
+testtreeflow
 testtreefocus
 testtreesort
-treestoretest
-testtreeflow
+testtreeview
 testxinerama
+treestoretest
