@@ -1,3 +1,7 @@
+2004-03-12  Morten Welinder  <terra@gnome.org>
+
+	* tests/Makefile.am: Add new testspinbutton.c
+
 2004-03-11  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/gtkfilechooserdefault.c (shortcuts_drag_set_delete_cursor):
